[gd_scene load_steps=2 format=3 uid="uid://c5ma37gfjeav6"]

[ext_resource type="Script" path="res://Rigs/NonVR/NonVRRig.gd" id="1_lvob5"]

[node name="NonVRRig" type="Node3D"]
script = ExtResource("1_lvob5")

[node name="HeadPivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="HeadCamera" type="Camera3D" parent="HeadPivot"]
unique_name_in_owner = true

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RestartXRBtn" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 155.0
offset_bottom = 41.0
text = "RESTART WITH XR"
